Wed Sep  2 18:04:13 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.h (GET_PC_COUNT): remove unused macro.

Wed Sep  2 17:18:37 2015  Chris Schneider  <chris@christopher-schneider.com>

	* process.c (proc_detach): [DOC] fix typo "intent" as "intend" in
	  rdoc.  [Fix GH-1011]

Wed Sep  2 16:58:21 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_realpath_internal): use filesystem encoding if the
	  argument is in ASCII encodings.

	* win32/file.c (rb_readlink): needs the result encoding.

Tue Sep  1 18:37:15 2015  Koichi Sasada  <ko1@atdot.net>

	* test/thread/test_queue.rb: catch up last commit.

Tue Sep  1 18:16:32 2015  Koichi Sasada  <ko1@atdot.net>

	* thread_sync.c (queue_do_close): ignore multiple close to allow
	  multiple producers.
	  https://bugs.ruby-lang.org/issues/10600#note-14

Tue Sep  1 18:06:26 2015  Koichi Sasada  <ko1@atdot.net>

	* thread_tools.c: rename thread_tools.c to thread_sync.c.

Mon Aug 31 17:04:45 2015  Koichi Sasada  <ko1@atdot.net>

	* class.c (move_refined_method): should insert a write barrier
	  from an original class to a created (cloned) method entry.

	* test/ruby/test_refinement.rb: add a test.

Sun Aug 30 02:42:22 2015  Aaron Patterson <tenderlove@ruby-lang.org>

	* ext/openssl/ossl_ssl.c (ossl_ssl_method_tab): Only add SSLv3 support
	  if the SSL library supports it.  Thanks Kurt Roeckx <kurt@roeckx.be>
	  [Bug #11376]

	* ext/openssl/extconf.rb: check for SSLv3 support in the SSL
	  implementation.

	* test/openssl/test_ssl.rb (class OpenSSL): Skip tests that need SSLv3
	  if there is no support.

Fri Aug 28 16:05:09 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rdoc/*: Update rdoc master(cfffed5)
	  https://github.com/rdoc/rdoc/pull/337
	  https://github.com/rdoc/rdoc/pull/367

Fri Aug 28 10:16:20 2015  Koichi Sasada  <ko1@atdot.net>

	* vm.c (hook_before_rewind): prevent kicking :return event while
	  finishing vm_exec func because invoke_block_from_c() kick a :return
	  event for bmethods.